This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
11/26/20: SEM_3-8-5
11/26/20: Fixed initial exposure time being used at highest tilt angle instead
of zero tilt with cosine intensity changes, broken 8/4/20 (In 3.8).

11/26/20: Added entry to Task-Specialized Options menu for making the program
close vales/turn off beam when idle for long enough.

11/26/20: Made current "Go to" button in Low Dose panel appear depressed.

11/26/20: Added script commands CloseNavigator and OpenNavigator; the latter
lets you define the output file name.

11/26/20: Fixed taking current parameters for number of montage frames instead
of ones the montage was taken with when making a map (In 3.8).

11/25/20: Fixed problem with using the current probe mode or alpha for
assessing whether focus calibration exists in Low Dose; used Focus area values
instead (In 3.8).

11/25/20: SEM_3-9-0beta1  REQUIRED FOR USING LATER BETA SERIALEM.EXE
11/24/20: Added support for HDF files.

11/24/20: Added property JeolBeamRampupTimeout to allow beam to be turned on
from within SerialEM on systems with rampup problem.

11/24/20: Fixed reordering of montage Z coordinates for dose-symmetric series,
in case that should ever happen (In 3.8).

11/23/20: Added property NoScopeControlOnStartup to work around a problem in
JEOL software when program starts with beam ramping up (In 3.8).

11/23/20: Stopped turning off beam when program crashes (In 3.8).

11/23/20: Fixed crash when autocentering beam with parameters from a higher
spot size (In 3.8).

11/22/20: Fixed SnapshotToFile command with first value 0 (In 3.8).

11/22/20: Made it possible to pick Navigator points on an overlay made from
two imported maps (In 3.8).

11/21/20: Fixed crash adding float image to tilt series mini-stack (In 3.8).
