@@ -83,6 +83,8 @@ public:
   bool mInitialized;
   void DrawSideBorders(CPaintDC & dc);
   void DrawButtonOutline(CPaintDC & dc, CWnd * but, int thickness, COLORREF color);
+  static void DrawButtonOutline(CWnd *wnd, CPaintDC & dc, CWnd * but, int thickness, 
+    COLORREF color, int offset);
   int CurrentButHeight(CButton *butMore);
 };
 
