@@ -327,6 +327,10 @@
             <TD>Acquire image with View parameters</TD>
           </TR>
           <TR VALIGN="top">
+            <TD width="85">Ctrl Enter</TD>
+            <TD>Runs the script when editing in a script editor window.</TD>
+          </TR>
+          <TR VALIGN="top">
             <TD width="85">Space bar</TD>
             <TD>Stop or restart continuous image acquisition, or repeat last single image 
               shot.</TD>
