@@ -46,7 +46,8 @@
       <a href="menu_script.htm#hid_script_setindentsize">Set Indent Size</a> command in 
       the Scipt menu.</P>
     <P>The buttons below the text area perform the following functions:</P>
-    <P><B>Run button - </B>will save the script in program memory and run it.</P>
+    <P><B>Run button - </B>will save the script in program memory and run it.&nbsp; 
+      Pressing Ctrl-Enter within the editing window will also run the script.</P>
     <P><B>Cancel button - </B>will close the window without saving the most recent 
       changes in program memory.</P>
     <P><B>OK button - </B>will save the script in program memory and close the window.</P>
