@@ -143,13 +143,18 @@
       <P><A NAME="hid_macro_stop"></A><b>Edit/Run One Line command (Script menu)</b></P>
     <P>Use this command to open a small free-standing window in which you can enter a 
       set of one-line commands and run them.&nbsp;The window allows up to 5 such 
-      scripts.&nbsp; This window is resizable, so you can change the height to show 
-      just the number that you need, or change the length to accommodate longer 
-      entries.&nbsp; Command completion with tab or ` works in 
-      this window just as in a regular script editor.&nbsp; The lines are preserved 
+      scripts.&nbsp; When you edit in one of the lines, its <strong>Run</strong> 
+      button becomes the default button for the window (as shown by the black outline) 
+      and pressing Enter (Return) will run that script.&nbsp; This window is 
+      resizable, so you can change the height to show just the number that you need, 
+      or change the length to accommodate longer entries.&nbsp; The lines are preserved 
       between sessions in the settings file.&nbsp; The first time that you open the 
       window, it will show one text box; subsequently it will restore its previous 
       size and location.</P>
+    <P>Command completion with tab or ` works in 
+      this window just as in a regular script editor.&nbsp; In addition, Ctrl-A will 
+      select the whole line, after which can be deleted with the Delete key.&nbsp; 
+      Ctrl-Z can be used to undo the last operation.</P>
     <P><B>Stop command (Script menu)</B></P>
       <P>Use this command to stop a running script.</P>
       <P><A NAME="hid_macro_end"></A><B>End command (Script menu)</B></P>
